fix: optimize lint performance and increase memory limit
- Enable `projectService` in ESLint config for better monorepo performance.
- Disable `import-x/extensions` as it is redundant with `moduleResolution: Node16`.
- Increase `NODE_OPTIONS` memory limit for the lint job in CI to prevent OOM errors.

--- a/.github/workflows/lint-build-test.yml
+++ b/.github/workflows/lint-build-test.yml
@@ -28,6 +28,8 @@ jobs:
   lint:
     name: Lint
     runs-on: ubuntu-latest
+    env:
+      NODE_OPTIONS: --max-old-space-size=4096
     needs: prepare
     strategy:
       matrix:
