--- a/packages/transaction-pay-controller/package.json
+++ b/packages/transaction-pay-controller/package.json
@@ -51,6 +51,7 @@
   "dependencies": {
     "@ethersproject/abi": "^5.7.0",
     "@ethersproject/contracts": "^5.7.0",
+    "@ethersproject/providers": "^5.7.0",
     "@metamask/assets-controllers": "^100.0.2",
     "@metamask/base-controller": "^9.0.0",
     "@metamask/bridge-controller": "^67.1.1",
