--- a/packages/assets-controller/package.json
+++ b/packages/assets-controller/package.json
@@ -52,6 +52,7 @@
     "@ethersproject/abi": "^5.7.0",
     "@ethersproject/providers": "^5.7.0",
     "@metamask/account-tree-controller": "^4.1.1",
+    "@metamask/assets-controllers": "^99.3.2",
     "@metamask/base-controller": "^9.0.0",
     "@metamask/controller-utils": "^11.18.0",
     "@metamask/core-backend": "^5.1.1",
@@ -67,6 +68,7 @@
     "@metamask/preferences-controller": "^22.1.0",
     "@metamask/snaps-controllers": "^17.2.0",
     "@metamask/snaps-utils": "^11.7.0",
+    "@metamask/transaction-controller": "^62.17.0",
     "@metamask/utils": "^11.9.0",
     "async-mutex": "^0.5.0",
     "bignumber.js": "^9.1.2",
