feat: add staked balance data source (#7936)
## Explanation

<!--
Thanks for your contribution! Take a moment to answer these questions so
that reviewers have the information they need to properly understand
your changes:

* What is the current state of things and why does it need to change?
* What is the solution your changes offer and how does it work?
* Are there any changes whose purpose might not obvious to those
unfamiliar with the domain?
* If your primary goal was to update one package but you found you had
to update another one along the way, why did you do so?
* If you had to upgrade a dependency, why did you do so?
-->

**Current state:** AssetsController already had
`accountsApiDataSourceConfig` and `priceDataSourceConfig` for
per-data-source options (e.g. `pollInterval`, `tokenDetectionEnabled`).
Two gaps: (1) `priceDataSourceConfig.pollInterval` was not applied when
subscribing to price updates—the controller always passed its
`defaultUpdateInterval` into the subscription request, so the price data
source’s configured interval was never used and spot-price requests did
not follow the configured interval. (2) The staked balance data source
had no dedicated config object on the controller, so consumers could not
configure it (e.g. `enabled`, `pollInterval`) in the same way as the
other data sources.

**Solution:** (1) The controller now stores
`priceDataSourceConfig?.pollInterval` in a `#pricePollInterval` field
and uses it when calling `subscribeAssetsPrice` (as the default
`updateInterval`). So e.g. `priceDataSourceConfig: { pollInterval: 5000
}` results in spot-price requests every 5s. (2)
`StakedBalanceDataSourceConfig` and `stakedBalanceDataSourceConfig` are
added to the controller options and passed through to
`StakedBalanceDataSource`, supporting `enabled` and `pollInterval` so
the staked balance data source is configurable alongside accounts API
and price.

**Non-obvious:** Price polling uses the subscription request’s
`updateInterval` when prese

--- a/packages/assets-controller/tsconfig.json
+++ b/packages/assets-controller/tsconfig.json
@@ -10,7 +10,8 @@
     { "path": "../keyring-controller" },
     { "path": "../messenger" },
     { "path": "../network-enablement-controller" },
-    { "path": "../preferences-controller" }
+    { "path": "../preferences-controller" },
+    { "path": "../assets-controllers" }
   ],
   "include": ["../../types", "./src"]
 }
