--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -2,8 +2,6 @@ compressionLevel: mixed
 
 enableGlobalCache: false
 
-enableImmutableInstalls: true
-
 enableScripts: false
 
 enableTelemetry: false
@@ -14,14 +12,18 @@ logFilters:
 
 nodeLinker: node-modules
 
-npmMinimalAgeGate: 4320
+plugins:
+  - path: .yarn/plugins/@yarnpkg/plugin-allow-scripts.cjs
+    spec: "https://raw.githubusercontent.com/LavaMoat/LavaMoat/main/packages/yarn-plugin-allow-scripts/bundles/@yarnpkg/plugin-allow-scripts.js"
 
+# Configure the NPM minimal age gate to 3 days, meaning packages must be at
+# least 3 days old to be installed.
+npmMinimalAgeGate: 4320 # 3 days (in minutes)
+
+# Override the minimal age gate, allowing certain packages to be installed
+# regardless of their publish age.
 npmPreapprovedPackages:
   - "@metamask/*"
   - "@metamask-previews/*"
   - "@lavamoat/*"
   - "@ts-bridge/*"
-
-plugins:
-  - path: .yarn/plugins/@yarnpkg/plugin-allow-scripts.cjs
-    spec: "https://raw.githubusercontent.com/LavaMoat/LavaMoat/main/packages/yarn-plugin-allow-scripts/bundles/@yarnpkg/plugin-allow-scripts.js"
