--- a/packages/bridge-status-controller/package.json
+++ b/packages/bridge-status-controller/package.json
@@ -55,6 +55,7 @@
     "@metamask/gas-fee-controller": "^26.0.2",
     "@metamask/network-controller": "^29.0.0",
     "@metamask/polling-controller": "^16.0.2",
+    "@metamask/profile-sync-controller": "^27.1.0",
     "@metamask/snaps-controllers": "^17.2.0",
     "@metamask/superstruct": "^3.1.0",
     "@metamask/transaction-controller": "^62.17.0",
