feat(ClientController): init controller (#7808)
## Explanation

**Current state:** Application lifecycle management (knowing when the UI
is open or closed) is currently scattered across platform-specific code
(Extension and Mobile). When the UI state changes, MetamaskController
must manually notify each controller/service that cares about this state
via imperative calls.

**Problem:** This approach doesn't scale well. Every time a new
controller needs to respond to client state changes (stop polling,
disconnect WebSockets, pause subscriptions), the platform code has to be
modified to add another manual call. Platform code becomes tightly
coupled to controller-specific behavior.

**Solution:** This PR introduces `@metamask/ui-state-controller`, a new
shared controller that centralizes application lifecycle state. The
pattern follows an inversion of control approach:

1. Platform code calls a single messenger action:
`UiStateController:setUiOpen`
2. Consumer controllers subscribe to `UiStateController:stateChange` and
manage themselves
3. **Platform code no longer needs controller-specific logic** (e.g.,
starting/stopping polling, connecting/disconnecting WebSockets) —
controllers handle this internally by reacting to state changes

This enables polling controllers to stop when the client closes,
WebSocket connections to disconnect, and real-time subscriptions to
pause—all without modifying platform code, with the logic encapsulated
in core.

**State properties:**
- `isUiOpen: boolean` — Whether the client (UI) is currently open (not
persisted, always starts as `false`)

**Messenger API:**
- Action: `UiStateController:setUiOpen` — Called by platform code
- Event: `UiStateController:stateChange` — Subscribed to by consumer
controllers

## References

- Related Extension PR:
https://github.com/MetaMask/metamask-extension/pull/39703
- Related Mobile PR:
https://github.com/MetaMask/metamask-mobile/pull/25517

## Checklist

- [x] I've updated the test suite for new or upda

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -60,6 +60,9 @@
       "path": "./packages/claims-controller"
     },
     {
+      "path": "./packages/client-controller"
+    },
+    {
       "path": "./packages/composable-controller"
     },
     {
