--- a/packages/compliance-controller/package.json
+++ b/packages/compliance-controller/package.json
@@ -52,7 +52,8 @@
     "@metamask/controller-utils": "^11.18.0",
     "@metamask/messenger": "^0.3.0",
     "@metamask/superstruct": "^3.1.0",
-    "@metamask/utils": "^11.9.0"
+    "@metamask/utils": "^11.9.0",
+    "reselect": "^5.1.1"
   },
   "devDependencies": {
     "@metamask/auto-changelog": "^3.4.4",
@@ -61,7 +62,6 @@
     "deepmerge": "^4.2.2",
     "jest": "^29.7.0",
     "nock": "^13.3.1",
-    "sinon": "^9.2.4",
     "ts-jest": "^29.2.5",
     "typedoc": "^0.25.13",
     "typedoc-plugin-missing-exports": "^2.0.0",
