refactor: service url mapping

--- a/packages/compliance-controller/tsconfig.json
+++ b/packages/compliance-controller/tsconfig.json
@@ -3,10 +3,10 @@
   "compilerOptions": {
     "baseUrl": "./"
   },
+  "include": ["../../types", "./src"],
   "references": [
     { "path": "../base-controller" },
     { "path": "../controller-utils" },
     { "path": "../messenger" }
-  ],
-  "include": ["../../types", "./src"]
+  ]
 }
