--- a/packages/notification-services-controller/package.json
+++ b/packages/notification-services-controller/package.json
@@ -109,6 +109,7 @@
     "@metamask/utils": "^11.9.0",
     "bignumber.js": "^9.1.2",
     "firebase": "^11.2.0",
+    "lodash": "^4.17.21",
     "loglevel": "^1.8.1",
     "semver": "^7.6.3",
     "uuid": "^8.3.2"
@@ -119,6 +120,7 @@
     "@metamask/auto-changelog": "^3.4.4",
     "@ts-bridge/cli": "^0.6.4",
     "@types/jest": "^29.5.14",
+    "@types/lodash": "^4.14.191",
     "@types/readable-stream": "^2.3.0",
     "@types/semver": "^7",
     "contentful": "^10.15.0",
