update `generate-method-action-types` script to take path into account

--- a/packages/profile-sync-controller/package.json
+++ b/packages/profile-sync-controller/package.json
@@ -93,6 +93,9 @@
     "build:docs": "typedoc",
     "changelog:update": "../../scripts/update-changelog.sh @metamask/profile-sync-controller",
     "changelog:validate": "../../scripts/validate-changelog.sh @metamask/profile-sync-controller",
+    "generate-method-action-types": "yarn generate-method-action-types:authentication $0 && yarn generate-method-action-types:user-storage $0",
+    "generate-method-action-types:authentication": "tsx ../../scripts/generate-method-action-types.ts sr/c/controllers/authentication",
+    "generate-method-action-types:user-storage": "tsx ../../scripts/generate-method-action-types.ts src/controllers/user-storage",
     "publish:preview": "yarn npm publish --tag preview",
     "since-latest-release": "../../scripts/since-latest-release.sh",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest --reporters=jest-silent-reporter",
