--- a/packages/compliance-controller/package.json
+++ b/packages/compliance-controller/package.json
@@ -40,6 +40,7 @@
     "build:docs": "typedoc",
     "changelog:update": "../../scripts/update-changelog.sh @metamask/compliance-controller",
     "changelog:validate": "../../scripts/validate-changelog.sh @metamask/compliance-controller",
+    "generate-method-action-types": "tsx ../../scripts/generate-method-action-types.ts",
     "publish:preview": "yarn npm publish --tag preview",
     "since-latest-release": "../../scripts/since-latest-release.sh",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest --reporters=jest-silent-reporter",
