--- a/packages/ramps-controller/package.json
+++ b/packages/ramps-controller/package.json
@@ -62,6 +62,7 @@
     "jest": "^29.7.0",
     "nock": "^13.3.1",
     "ts-jest": "^29.2.5",
+    "tsx": "^4.20.5",
     "typedoc": "^0.25.13",
     "typedoc-plugin-missing-exports": "^2.0.0",
     "typescript": "~5.3.3"
