--- a/packages/sample-controllers/package.json
+++ b/packages/sample-controllers/package.json
@@ -40,6 +40,7 @@
     "build:docs": "typedoc",
     "changelog:update": "../../scripts/update-changelog.sh @metamask/sample-controllers",
     "changelog:validate": "../../scripts/validate-changelog.sh @metamask/sample-controllers",
+    "generate-method-action-types": "tsx ../../scripts/generate-method-action-types.ts",
     "publish:preview": "yarn npm publish --tag preview",
     "since-latest-release": "../../scripts/since-latest-release.sh",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest --reporters=jest-silent-reporter",
@@ -62,6 +63,7 @@
     "jest": "^29.7.0",
     "nock": "^13.3.1",
     "ts-jest": "^29.2.5",
+    "tsx": "^4.20.5",
     "typedoc": "^0.25.13",
     "typedoc-plugin-missing-exports": "^2.0.0",
     "typescript": "~5.3.3"
