--- a/packages/ai-controllers/package.json
+++ b/packages/ai-controllers/package.json
@@ -50,6 +50,7 @@
   "dependencies": {
     "@metamask/base-controller": "^9.0.0",
     "@metamask/messenger": "^0.3.0",
+    "@metamask/superstruct": "^3.1.0",
     "@metamask/utils": "^11.9.0"
   },
   "devDependencies": {
