--- a/packages/assets-controller/package.json
+++ b/packages/assets-controller/package.json
@@ -55,6 +55,7 @@
     "@metamask/account-tree-controller": "^4.1.1",
     "@metamask/assets-controllers": "^100.0.2",
     "@metamask/base-controller": "^9.0.0",
+    "@metamask/client-controller": "^1.0.0",
     "@metamask/controller-utils": "^11.19.0",
     "@metamask/core-backend": "^6.0.0",
     "@metamask/keyring-api": "^21.5.0",
@@ -73,7 +74,8 @@
     "@metamask/utils": "^11.9.0",
     "async-mutex": "^0.5.0",
     "bignumber.js": "^9.1.2",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "p-limit": "^3.1.0"
   },
   "devDependencies": {
     "@metamask/auto-changelog": "^3.4.4",
