--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -62,6 +62,9 @@
       "path": "./packages/client-controller/tsconfig.build.json"
     },
     {
+      "path": "./packages/compliance-controller/tsconfig.build.json"
+    },
+    {
       "path": "./packages/composable-controller/tsconfig.build.json"
     },
     {
