--- a/tsconfig.json
+++ b/tsconfig.json
@@ -63,6 +63,9 @@
       "path": "./packages/client-controller"
     },
     {
+      "path": "./packages/compliance-controller"
+    },
+    {
       "path": "./packages/composable-controller"
     },
     {
