--- a/packages/messenger-docs/package.json
+++ b/packages/messenger-docs/package.json
@@ -44,10 +44,10 @@
     "build:docs": "typedoc",
     "changelog:update": "../../scripts/update-changelog.sh @metamask/messenger-docs",
     "changelog:validate": "../../scripts/validate-changelog.sh @metamask/messenger-docs",
-    "docs:build": "tsx src/cli.ts ../.. --source --build",
-    "docs:dev": "tsx src/cli.ts ../.. --source --dev",
-    "docs:generate": "tsx src/cli.ts ../.. --source",
-    "docs:serve": "tsx src/cli.ts ../.. --source --serve",
+    "docs:build": "tsx src/cli.ts ../.. --build",
+    "docs:dev": "tsx src/cli.ts ../.. --dev",
+    "docs:generate": "tsx src/cli.ts ../..",
+    "docs:serve": "tsx src/cli.ts ../.. --serve",
     "publish:preview": "yarn npm publish --tag preview",
     "since-latest-release": "../../scripts/since-latest-release.sh",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest --reporters=jest-silent-reporter",
