fix: include yarn.lock in preview build artifacts (#8023)
## Explanation

The `publish-preview` job fails because `yarn workspaces foreach` can't
resolve the renamed `@metamask-previews/` packages. The root cause is
that `prepare-preview-builds.sh` updates the lockfile via `yarn install
--no-immutable`, but `yarn.lock` is not included in the uploaded
artifacts. The publish job gets a stale lockfile from main that doesn't
match the renamed package names.

This adds `yarn.lock` to the artifact upload and removes the `path`
override on download so it extracts to the workspace root alongside
`packages/`.

## References

* Fixes failure introduced in #8011

## Checklist

- [x] I've updated the test suite for new or updated code as appropriate
- [x] I've updated documentation (JSDoc, Markdown, etc.) for new or
updated code as appropriate
- [x] I've communicated my changes to consumers by [updating changelogs
for packages I've
changed](https://github.com/MetaMask/core/tree/main/docs/processes/updating-changelogs.md)
- [ ] I've introduced [breaking
changes](https://github.com/MetaMask/core/tree/main/docs/processes/breaking-changes.md)
in this PR and have prepared draft pull requests for clients and
consumer packages to resolve them

<!-- CURSOR_SUMMARY -->
---

> [!NOTE]
> **Low Risk**
> CI workflow-only change that affects artifact packaging/restoration;
low risk outside of potentially impacting preview publish reliability.
> 
> **Overview**
> Fixes the preview publish workflow by **including the updated
`yarn.lock`** in the uploaded build artifact set, ensuring the publish
job uses the same lockfile produced by `yarn prepare-preview-builds`.
> 
> Also removes the `actions/download-artifact` `path` override so
artifacts (including `yarn.lock`) restore to the workspace root instead
of being extracted under `packages/`.
> 
> <sup>Written by [Cursor
Bugbot](https://cursor.com/dashboard?tab=bugbot) for commit
0a455430c1375acb30b33d276f69c546dcf8e428. This will update automatic

--- a/.github/workflows/publish-preview.yml
+++ b/.github/workflows/publish-preview.yml
@@ -48,6 +48,7 @@ jobs:
           include-hidden-files: true
           retention-days: 4
           path: |
+            ./yarn.lock
             ./packages/*/
             !./packages/*/node_modules/
             !./packages/*/src/
@@ -70,7 +71,6 @@ jobs:
         uses: actions/download-artifact@v7
         with:
           name: preview-build-artifacts
-          path: packages
       # The artifact package.json files come from the PR branch.
       # A malicious PR could inject lifecycle scripts (prepack/postpack) that
       # execute during `yarn npm publish` with the NPM token in the environment
