fix: reconcile workspace state after restoring preview artifacts (#8025)
## Explanation

The `publish-preview` job fails because `yarn workspaces foreach`
requires a consistent workspace state. The restored artifacts include an
updated `yarn.lock` (from `prepare-preview-builds.sh`), but
`node_modules` is from the main branch checkout. This adds `yarn install
--no-immutable` after restoring artifacts to reconcile the two.

## References

* Fixes publish failure introduced in #8011

## Checklist

- [x] I've updated the test suite for new or updated code as appropriate
- [x] I've updated documentation (JSDoc, Markdown, etc.) for new or
updated code as appropriate
- [x] I've communicated my changes to consumers by [updating changelogs
for packages I've
changed](https://github.com/MetaMask/core/tree/main/docs/processes/updating-changelogs.md)
- [ ] I've introduced [breaking
changes](https://github.com/MetaMask/core/tree/main/docs/processes/breaking-changes.md)
in this PR and have prepared draft pull requests for clients and
consumer packages to resolve them

<!-- CURSOR_SUMMARY -->
---

> [!NOTE]
> **Low Risk**
> CI-only workflow change that adds a dependency install step; low risk
beyond potential impact to publish job timing/behavior.
> 
> **Overview**
> Fixes the `publish-preview` GitHub Actions workflow by running `yarn
install --no-immutable` after restoring build artifacts, ensuring the
checked-out workspace state matches the restored `yarn.lock` before
`yarn workspaces foreach ... npm publish` executes.
> 
> <sup>Written by [Cursor
Bugbot](https://cursor.com/dashboard?tab=bugbot) for commit
0f2564883d9eeee4cf6d9708d4239990c314229b. This will update automatically
on new commits. Configure
[here](https://cursor.com/dashboard?tab=bugbot).</sup>
<!-- /CURSOR_SUMMARY -->

--- a/.github/workflows/publish-preview.yml
+++ b/.github/workflows/publish-preview.yml
@@ -91,6 +91,8 @@ jobs:
             fi
           done
           exit "$bad"
+      - name: Reconcile workspace state
+        run: yarn install --no-immutable
       - name: Publish preview builds
         run: yarn workspaces foreach --no-private --all exec yarn npm publish --tag preview
         env:
