fix: extract interface declarations and resolve repo URL for source links

--- a/packages/messenger-docs/package.json
+++ b/packages/messenger-docs/package.json
@@ -31,9 +31,7 @@
   },
   "main": "./dist/index.cjs",
   "types": "./dist/index.d.cts",
-  "bin": {
-    "messenger-docs": "./dist/cli.mjs"
-  },
+  "bin": "./dist/cli.mjs",
   "files": [
     "dist/",
     "template/"
